<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_by_date"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_sort_date"
                android:title="@string/sort_by_date" />
            <item
                android:id="@+id/action_sort_priority"
                android:title="@string/sort_by_priority" />
        </menu>
    </item>

    <item
        android:id="@+id/action_filter"
        android:title="Filter"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_filter_all"
                android:title="All Tasks"
                android:checkable="true"
                android:checked="true" />
            <item
                android:id="@+id/action_filter_completed"
                android:title="@string/filter_completed"
                android:checkable="true" />
            <item
                android:id="@+id/action_filter_pending"
                android:title="@string/filter_pending"
                android:checkable="true" />
        </menu>
    </item>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>